<resources>
    <string name="app_name">calculator2</string>
    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="ms">MS</string>
    <string name="m">M+</string>
    <string name="mMinus">M-</string>
    <string name="backArrow"><![CDATA[<--]]></string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="plusMinus">±</string>
    <string name="root">√</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divided">/</string>
    <string name="procent">%</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiply">*</string>
    <string name="oneDevidedByX">1/x</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="sq">Sq</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
</resources>